--- a/app/globals.css
+++ b/app/globals.css
@@ -62,10 +62,15 @@
 }
 
 *:focus-visible {
-  outline: 3px solid color-mix(in srgb, currentColor 40%, transparent);
+  outline: none  !important;
+  box-shadow: none !important;
 }
 
-body {
+
+
+
+
+body { 
   width: 100%;
   height: 100%;
   font-family: var(--outfit-font);
