update necessary imports

--- a/app/(company)/work-with-us/components/Hero.module.scss
+++ b/app/(company)/work-with-us/components/Hero.module.scss
@@ -1,5 +1,5 @@
-@import '/styles/scss/colors';
-@import '/styles/scss/breakpoints';
+@import 'styles/scss/colors';
+@import 'styles/scss/breakpoints';
 
 .wrapper {
   padding: 65px 0;
