--- a/app/homepage/Homepage.module.scss
+++ b/app/homepage/Homepage.module.scss
@@ -1,5 +1,5 @@
-@import '/styles/scss/colors.scss';
-@import '/styles/scss/breakpoints.scss';
+@import 'styles/scss/colors.scss';
+@import 'styles/scss/breakpoints.scss';
 
 .matrix2 {
   transform: matrix(1, 0, -0.21, 0.98, 0, 0);
