--- a/app/(entrance)/login/components/LoginPage.module.scss
+++ b/app/(entrance)/login/components/LoginPage.module.scss
@@ -1,5 +1,5 @@
-@import '/styles/scss/colors';
-@import '/styles/scss/breakpoints';
+@import 'styles/scss/colors';
+@import 'styles/scss/breakpoints';
 
 .wrapper {
   min-height: 100vh;
