--- a/app/shared/inputs/PhoneInput.module.scss
+++ b/app/shared/inputs/PhoneInput.module.scss
@@ -1,5 +1,5 @@
-@import '/styles/scss/colors';
-@import '/styles/scss/breakpoints';
+@import 'styles/scss/colors';
+@import 'styles/scss/breakpoints';
 
 .input {
   margin-bottom: 18px;
